--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,8 +79,11 @@
             <dt><i class="Hui-iconfont">&#xe63a;</i> 营销管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="sales-opportunity.html" data-title="销售机会管理" href="javascript:void(0)"><i
-                            class="Hui-iconfont">&#xe6f1;</i>销售机会管理</a></li>
+                    <li><a data-href="sales-opportunity.html" data-title="销售机会管理"
+                           href="javascript:void(0)"><i
+                            class="Hui-iconfont">&#xe6f1;</i>销售机会管理
+                    </a>
+                    </li>
 
                     <li><a data-href="customer-develop.html" data-title="客户开发计划" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6b5;</i>客户开发计划</a></li>
