--- a/src/main/resources/templates/sales-opportunity.html
+++ b/src/main/resources/templates/sales-opportunity.html
@@ -432,7 +432,9 @@
         th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript">
     $('.table-sort').dataTable({
-        "aaSorting": [[1, "desc"]],//默认第几个排序
+        "aaSorting": [
+            [1, "desc"]
+        ],//默认第几个排序
         "bStateSave": true,//状态保存
         "pading": false,
         "aoColumnDefs": [
