--- a/src/main/resources/templates/customer-information-container.html
+++ b/src/main/resources/templates/customer-information-container.html
@@ -110,7 +110,9 @@
 <script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
 $('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
+	"aaSorting": [
+	    [ 1, "desc" ]
+	],//默认第几个排序
 	"bStateSave": true,//状态保存
 	"pading":false,
 	"aoColumnDefs": [
