--- a/src/main/resources/templates/service-distribution.html
+++ b/src/main/resources/templates/service-distribution.html
@@ -215,7 +215,9 @@
 
 
 $('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
+	"aaSorting": [
+	    [ 1, "desc" ]
+	],//默认第几个排序
 	"bStateSave": true,//状态保存
 	"pading":false,
 	"aoColumnDefs": [
