--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,14 +79,13 @@
             <dt><i class="Hui-iconfont">&#xe63a;</i> 营销管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="sales-opportunity.html" data-title="销售机会管理"
+                    <li><a data-href="/sales" data-title="销售机会管理"
                            href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6f1;</i>销售机会管理
                     </a>
                     </li>
 
-                    <li><a data-href="customer-develop.html" data-title="客户开发计划" href="javascript:void(0)"><i
-                            class="Hui-iconfont">&#xe6b5;</i>客户开发计划</a></li>
+                    <li><a data-href="/developingCustomer" data-title="客户开发计划" href="javascript:void(0)"><i class="Hui-iconfont">&#xe6b5;</i>客户开发计划</a></li>
                 </ul>
             </dd>
         </dl>
@@ -106,15 +105,14 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 服务管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="service-create.html" data-title="服务创建" href="javascript:void(0)"><i
-                            class="Hui-iconfont">&#xe6f2;</i>服务创建</a></li>
-                    <li><a data-href="service-distribution.html" data-title="服务分配" href="javascript:void(0)"><i
+                    <li><a data-href="/createService" data-title="服务创建" href="javascript:void(0)"><i class="Hui-iconfont">&#xe6f2;</i>服务创建</a></li>
+                    <li><a data-href="/serviceDistribution" data-title="服务分配" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe621;</i>服务分配</a></li>
-                    <li><a data-href="service-handlelist.html" data-title="服务处理" href="javascript:void(0)"><i
+                    <li><a data-href="/serviceProcess" data-title="服务处理" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe63c;</i>服务处理</a></li>
-                    <li><a data-href="service-feedback.html" data-title="服务反馈" href="javascript:void(0)"><i
+                    <li><a data-href="/serviceFeedback" data-title="服务反馈" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe70c;</i>服务反馈</a></li>
-                    <li><a data-href="service-file.html" data-title="服务归档" href="javascript:void(0)"><i
+                    <li><a data-href="/serviceArchive" data-title="服务归档" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6f3;</i>服务归档</a></li>
                 </ul>
             </dd>
