--- a/src/main/resources/templates/service-distribution.html
+++ b/src/main/resources/templates/service-distribution.html
@@ -34,9 +34,9 @@
 	<table>
 		<form class="Huiform" method="post" action="" target="_self">
 		<tr>
-		     客户：<input type="text" name="" id="" placeholder=" " style="width:200px" class="input-text" style="width:120px;">
+		     客户：<input type="text" name="" id="" placeholder=" " class="input-text" style="width:120px;">
 	 &nbsp	 &nbsp	 &nbsp
-			 概要：<input type="text" name="" id="" placeholder=" " style="width:200px" class="input-text" style="width:120px;">
+			 概要：<input type="text" name="" id="" placeholder=" " style="width:200px" class="input-text" >
 	 &nbsp	 &nbsp	 &nbsp
 			 服务类型：<span class="select-box" style="width:80px">
 			<select class="select" name="brandclass" size="1">
@@ -215,7 +215,9 @@
 
 
 $('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
+	"aaSorting": [
+	    [ 1, "desc" ]
+	],//默认第几个排序
 	"bStateSave": true,//状态保存
 	"pading":false,
 	"aoColumnDefs": [
