--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -125,13 +125,13 @@
             <dt><i class="Hui-iconfont">&#xe61e;</i> 统计报表<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="contribution-analysis.html" data-title="客户贡献分析" href="javascript:void(0)"><i
+                    <li><a data-href="/report/contribution" data-title="客户贡献分析" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6cf;</i>客户贡献分析</a></li>
-                    <li><a data-href="constitute-analysis.html" data-title="客户构成分析" href="javascript:void(0)"><i
+                    <li><a data-href="/report/constitute" data-title="客户构成分析" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe635;</i>客户构成分析</a></li>
-                    <li><a data-href="service-analysis.html" data-title="客户服务分析" href="javascript:void(0)"><i
+                    <li><a data-href="/report/service" data-title="客户服务分析" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe672;</i>客户服务分析</a></li>
-                    <li><a data-href="lost-analysis.html" data-title="客户流失分析" href="javascript:void(0)"><i
+                    <li><a data-href="/report/loss" data-title="客户流失分析" href="javascript:void(0)"><i
                             class="Hui-iconfont">&#xe6ba;</i>客户流失分析</a></li>
 
                 </ul>
