--- a/src/main/resources/templates/customer-develop-executeplan.html
+++ b/src/main/resources/templates/customer-develop-executeplan.html
@@ -35,82 +35,86 @@
 <table>
 	<table class="table table-border table-bordered table-bg table-hover  table-responsive">
 		<form class="Huiform" method="post" action="" target="_self">
-		 <div>
-		 <tr>
 
-			 <td width="100"><span class="l"  ><label >编号：</label> </span> </td>
-			 <td><span style="float:left;">没有数据显示</span></td>
-	    
-			 <td width="100"><span class="l" > <label>机会来源：</label></span> </td>
-			 <td><span style="float:left;">咨询</span></td> 
-		
-			 </tr>
-			
+			<!--开始-->
+			<div>
+				<tr>
+
+					<td width="100" ><span class="l"  ><label >编号：</label> </span> </td>
+					<td th:text="${allSale.number}"><span style="float:left;">没有数据显示</span></td>
+
+					<td width="100"><span class="l" > <label>机会来源：</label></span> </td>
+					<td th:text="${allSale.source}"><span style="float:left;"></span></td>
+
+				</tr>
+
+				<tr>
+					<td><span class="l"><label >客户名称：</label> </span></td>
+					<td th:text="${allSale.customerName}"><span style="float:left;"> </span></td>
+
+					<td><span class="l" > <label>成功几率：</label></span></td>
+					<td th:text="${allSale.chance}"><span style="float:left;">咨询</span></td>
+
+				</tr>
+
+				<tr>
+					<td ><span class="l"><label >概要：</label> </span></td>
+					<td th:text="${allSale.summary}"><span style="float:left;"> </span></td>
+
+
+				</tr>
+
+	</table>
+</table>
+
+
+
+		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			<tr>
-			 <td><span class="l"><label >客户名称：</label> </span></td>
-			 <td><span style="float:left;"> 456</span></td>
-	    
-			 <td><span class="l" > <label>成功几率：</label></span></td>
-			 <td><span style="float:left;">咨询</span></td> 
-		
-			 </tr>
-			
-		   <tr>
-			 <td ><span class="l"><label >概要：</label> </span></td>
-			 <td ><span style="float:left;"> KH071202001</span></td>
-		
-		
-			 </tr>
-			 
-			 </table>
-			 </br>
-			 
-			 
-			 
-			 <table class="table table-border table-bordered table-bg table-hover  table-responsive">
-			  <tr>
-			 <td width="100"><span class="l"><label >联系人：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
-	    
-			 <td width="100"><span class="l" > <label>联系电话：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
-		
-			 </tr>
-			 
-			  <tr>
-			 <td><span class="l"><label >机会描述：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
-			 
-	    <td frame=rhs><span class="l" ><label ></label> </span></td>
-		<td frame=rhs><span class="l" ><label ></label> </span></td>
-		
-			 </tr>
-			 </table>
-			 
-			  </br>
-			   
-			  <table class="table table-border table-bordered table-bg table-hover  table-responsive">
-			  <tr>
-			 <td width="100"><span class="l"><label >创建人：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
-	    
-			 <td width="100"><span class="l" > <label>创建时间：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
-		
-			 </tr>
-			 <tr>
-			 <td><span class="l"><label >指派给：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
-	    
-			 <td><span class="l" > <label>指派时间：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
-		
-			 </tr>
-			 
-			 </div>
-			 
-			 
-			</form>
+				<td width="100"><span class="l"><label >联系人：</label> </span></td>
+				<td th:text="${allSale.contact}"><span style="float:left;"> </span></td>
+
+				<td width="100"><span class="l" > <label>联系电话：</label></span></td>
+				<td th:text="${allSale.contactPhone}"><span style="float:left;">北京聪海信息科技有限公司</span></td>
+
+			</tr>
+
+			<tr>
+				<td><span class="l"><label >机会描述：</label> </span></td>
+				<td><span style="float:left;"> </span></td>
+
+				<td frame=rhs><span class="l" ><label ></label> </span></td>
+				<td frame=rhs><span class="l" ><label ></label> </span></td>
+
+			</tr>
+		</table>
+
+		</br>
+
+		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
+			<tr>
+				<td width="100"><span class="l"><label >创建人：</label> </span></td>
+				<td th:text="${allSale.founder}"><span style="float:left;"> </span></td>
+
+				<td width="100"><span class="l" > <label>创建时间：</label></span></td>
+				<td th:text="${allSale.createTime}"><span style="float:left;"></span></td>
+
+			</tr>
+			<tr>
+				<td><span class="l"><label >指派给：</label> </span></td>
+				<td th:text="${allSale.owner}"><span style="float:left;"> </span></td>
+
+				<td><span class="l" > <label>指派时间：</label></span></td>
+				<td th:text="${allSale.assignTime}"><span style="float:left;"></span></td>
+
+			</tr>
+
+	</div>
+
+	<!--结束-->
+
+
+	</form>
 			</table>
 	</div>
 	<div class="mt-20">
@@ -173,7 +177,7 @@
 			<tr>
 			
 				<td > <span  style="float:left;"><font size="2" >当前销售机会状态：</font></span><span  class="td-status label label-success radius" style="float:left;">已指派（开发中）</span></td>
-			    <td class="f-14 td-manage"><a style="text-decoration:none" class="btn btn-danger radius" onClick="article_stop(this)" href="javascript:;" ><i class="Hui-iconfont">&#xe631;</i>终止开发</a> <a style="text-decoration:none" class="btn btn-primary radius" " href="customer-develop-createplan.html" ><i class="Hui-iconfont">&#xe725;</i>制定计划</a> <a style="text-decoration:none" class="btn btn-success radius" onClick="article_shenhe(this)" href="javascript:;" ><i class="Hui-iconfont">&#xe6e1;</i>开发成功</a>
+			    <td class="f-14 td-manage"><a style="text-decoration:none" class="btn btn-danger radius" onClick="article_stop(this)" href="javascript:;" ><i class="Hui-iconfont">&#xe631;</i>终止开发</a> <a style="text-decoration:none" class="btn btn-primary radius"  href="customer-develop-createplan.html" ><i class="Hui-iconfont">&#xe725;</i>制定计划</a> <a style="text-decoration:none" class="btn btn-success radius" onClick="article_shenhe(this)" href="javascript:;" ><i class="Hui-iconfont">&#xe6e1;</i>开发成功</a>
 				
 				<a class="btn btn-default radius" type="button" href="javascript:window.location.href ='customer-develop.html'">返回客户开发界面</a>
 				
@@ -201,14 +205,14 @@
 <script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js"></script>
-<script type="text/javascript" src="public/webuploader/0.1.5/webuploader.min.js"></script>
-<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.config.js"></script>
-<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js"> </script>
-<script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js" th:src="@{/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js" th:src="@{/jquery.validation/1.14.0/validate-methods.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js" th:src="@{/jquery.validation/1.14.0/messages_zh.js}"></script>
+<script type="text/javascript" src="public/webuploader/0.1.5/webuploader.min.js" th:src="@{/webuploader/0.1.5/webuploader.min.js}"></script>
+<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.config.js" th:src="@{/ueditor/1.4.3/ueditor.config.js}"></script>
+<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js" th:src="@{/ueditor/1.4.3/ueditor.all.min.js}"> </script>
+<script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js" th:src="@{/ueditor/1.4.3/lang/zh-cn/zh-cn.js}"></script>
 <script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
