--- a/src/main/resources/templates/customer-develop.html
+++ b/src/main/resources/templates/customer-develop.html
@@ -58,161 +58,34 @@
 					<td>13729239239</td>
 					<td>2014-6-11 11:11:42</td>
 				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				
-				<tr class="text-c">
+					<td class="f-14 td-manage">
+						<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;
+						<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td>
+				</tr>
+
+
+				<tr class="text-c" th:each="allSale : ${allSales}">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage"> <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;  <a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td></tr>
+					<td th:text="${allSale.number}"></td>
+					<td th:text="${allSale.customerName}"></td>
+					<td th:text="${allSale.summary}"></td>
+					<td th:text="${allSale.contact}"></td>
+					<td th:text="${allSale.contactPhone}"></td>
+					<td th:text="${allSale.createTime}"></td>
+					<div th:switch="${allSale.status}">
+						<td th:case="1" class="td-status"><span class="label  radius">未指派</span></td>
+						<td th:case="*" class="td-status"><span class="label label-success radius">已指派</span></td>
+						<td th:case="" class="td-status"><span class="label  radius">已指派</span></td>
+					</div>
+					<td class="f-14 td-manage">
+						<a  class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;"
+							th:href="@{/toAppointPlan/{id}(id=${allSale.id})}"
+							title="制定计划">
+							<i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;
+						<a th:href="@{/toExecutePlan/{id}(id=${allSale.id})}" class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td>
+
+				</tr>
+
 				
 			</tbody>
 		</table>
@@ -225,7 +98,7 @@
 <script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
