--- a/src/main/resources/templates/sales-opportunity-dispatch.html
+++ b/src/main/resources/templates/sales-opportunity-dispatch.html
@@ -1,5 +1,7 @@
 <!--_meta 作为公共模版分离出去-->
-<!DOCTYPE HTML><html lang="zh-CN"      xmlns="http://www.w3.org/1999/xhtml"      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:float="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
@@ -33,30 +35,32 @@
 	<div class="text-c">
 	<table>
 	<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
-		<form class="Huiform" method="post" action="" target="_self">
-		 <div>
+		<form class="Huiform" th:action="@{/sale/opportunity/dispatch}" method="post" target="_self">
+
+		 <!--开始-->
+		   <div>
 		 <tr>
 
-			 <td width="100"><span class="l"  ><label >编号：</label> </span> </td>
-			 <td><span style="float:left;">没有数据显示</span></td>
+			 <td width="100" ><span class="l"  ><label >编号：</label> </span> </td>
+			 <td th:text="${allSale.number}"><span style="float:left;">没有数据显示</span></td>
 	    
 			 <td width="100"><span class="l" > <label>机会来源：</label></span> </td>
-			 <td><span style="float:left;">咨询</span></td> 
+			 <td th:text="${allSale.source}"><span style="float:left;"></span></td>
 		
 			 </tr>
 			
 			<tr>
 			 <td><span class="l"><label >客户名称：</label> </span></td>
-			 <td><span style="float:left;"> 456</span></td>
+			 <td th:text="${allSale.customerName}"><span style="float:left;"> </span></td>
 	    
 			 <td><span class="l" > <label>成功几率：</label></span></td>
-			 <td><span style="float:left;">咨询</span></td> 
+			 <td th:text="${allSale.chance}"><span style="float:left;">咨询</span></td>
 		
 			 </tr>
 			
 		   <tr>
 			 <td ><span class="l"><label >概要：</label> </span></td>
-			 <td ><span style="float:left;"> KH071202001</span></td>
+			 <td th:text="${allSale.summary}"><span style="float:left;"> </span></td>
 		
 		
 			 </tr>
@@ -69,16 +73,16 @@
 			 <table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			  <tr>
 			 <td width="100"><span class="l"><label >联系人：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
+			 <td th:text="${allSale.contact}"><span style="float:left;"> </span></td>
 	    
 			 <td width="100"><span class="l" > <label>联系电话：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
+			 <td th:text="${allSale.contactPhone}"><span style="float:left;">北京聪海信息科技有限公司</span></td>
 		
 			 </tr>
 			 
 			  <tr>
 			 <td><span class="l"><label >机会描述：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
+			 <td><span style="float:left;"> </span></td>
 			 
 	    <td frame=rhs><span class="l" ><label ></label> </span></td>
 		<td frame=rhs><span class="l" ><label ></label> </span></td>
@@ -91,23 +95,24 @@
 			  <table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			  <tr>
 			 <td width="100"><span class="l"><label >创建人：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
+			 <td th:text="${allSale.founder}"><span style="float:left;"> </span></td>
 	    
 			 <td width="100"><span class="l" > <label>创建时间：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
+			 <td th:text="${allSale.createTime}"><span style="float:left;"></span></td>
 		
 			 </tr>
 			 <tr>
 			 <td><span class="l"><label >指派给：</label> </span></td>
-			 <td><span style="float:left;"> KH071202001</span></td>
+			 <td th:text="${allSale.owner}"><span style="float:left;"> </span></td>
 	    
 			 <td><span class="l" > <label>指派时间：</label></span></td>
-			 <td><span style="float:left;">北京聪海信息科技有限公司</span></td> 
+			 <td th:text="${allSale.assignTime}"><span style="float:left;"></span></td>
 		
 			 </tr>
 			 
 			 </div>
-			 
+
+	<!--结束-->
 			 
 			</form>
 			</table>
@@ -120,12 +125,12 @@
 	<div class="mt-20">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-1"><span class="c-red">*</span>指派给：</label>
-			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select" size="1" id="dispatcher" name="dispatcher">
-					<option value="" selected>刘颖</option>
-					<option value="1">刽子手0</option>
-					<option value="2">刽子手1</option>
-					<option value="3">刽子手2</option>
+			<div  class="formControls col-xs-8 col-sm-9"> <span class="select-box">
+				<select th:field="*{allEmployee}" class="select" size="1" id="dispatcher" name="dispatcher">
+					<option value=""> -- </option>
+					<option th:name="${allEmpl}" th:each="allEmpl : ${allEmployee}"
+							th:value="${allEmpl}"
+							th:utext="${allEmpl}"/>
 				</select>
 				</span> </div>
 		</div>
@@ -142,7 +147,7 @@
 		<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
 			<span style="text-align: right;display:block;">
 
-				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
+				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 指派</button>
 			
 		<a class="btn btn-default radius" type="button" href="javascript:window.location.href ='sales-opportunity.html'">返回销售管理界面</a>
 
@@ -161,14 +166,14 @@
 <script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js"></script>
-<script type="text/javascript" src="public/webuploader/0.1.5/webuploader.min.js"></script>
-<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.config.js"></script>
-<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js"> </script>
-<script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js" th:src="@{/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js" th:src="@{/jquery.validation/1.14.0/validate-methods.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js" th:src="@{/jquery.validation/1.14.0/messages_zh.js}"></script>
+<script type="text/javascript" src="public/webuploader/0.1.5/webuploader.min.js" th:src="@{/webuploader/0.1.5/webuploader.min.js}"></script>
+<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.config.js" th:src="@{/ueditor/1.4.3/ueditor.config.js}"></script>
+<script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js" th:src="@{/ueditor/1.4.3/ueditor.all.min.js}"> </script>
+<script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js" th:src="@{/ueditor/1.4.3/lang/zh-cn/zh-cn.js}"></script>
 <script type="text/javascript">
 $(function(){
 	$('.skin-minimal input').iCheck({
