--- a/src/main/resources/templates/system-dictionary-add.html
+++ b/src/main/resources/templates/system-dictionary-add.html
@@ -102,10 +102,10 @@
         th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js"></script>
-<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/jquery.validate.js" th:src="@{/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/validate-methods.js" th:src="@{/jquery.validation/1.14.0/validate-methods.js}"></script>
+<script type="text/javascript" src="public/jquery.validation/1.14.0/messages_zh.js" th:src="@{/jquery.validation/1.14.0/messages_zh.js}"></script>
 <script type="text/javascript">
     $(".inputtable").keyup(function () {
         var content = $(this).val();
