--- a/src/main/resources/templates/lost-analysis.html
+++ b/src/main/resources/templates/lost-analysis.html
@@ -25,9 +25,9 @@
 <div class="page-container">
 	<div class="text-c">
 	<form class="Huiform" method="post" action="" target="_self">
-	 客户名称：<input type="text" name="" id="" placeholder=" " style="width:250px" class="input-text" style="width:120px;">
+	 客户名称：<input type="text" name="" id="" placeholder=" " style="width:250px" class="input-text" >
 	 &nbsp	 &nbsp	 &nbsp	 &nbsp	 &nbsp
-	 客户经理：<input type="text" name="" id="" placeholder=" " style="width:250px" class="input-text" style="width:120px;">
+	 客户经理：<input type="text" name="" id="" placeholder=" " style="width:250px" class="input-text" >
 		<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
 		</form >
 	</div>
@@ -73,9 +73,9 @@
 <script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script> <!--/_footer 作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js" th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" src="public/laypage/1.2/laypage.js" th:src="@{/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
 $('.table-sort').dataTable({
 	"aaSorting": [
