--- a/src/main/resources/templates/customer-develop.html
+++ b/src/main/resources/templates/customer-develop.html
@@ -49,19 +49,21 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					<td >睿智数码</u></td>
-					<td>采购笔记本电脑意向</td>
-					<td>刘先生</td>
-					<td>13729239239</td>
-					<td>2014-6-11 11:11:42</td>
-				    <td class="td-status"><span class="label label-success radius">已指派</span></td>
-					<td class="f-14 td-manage">
-						<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;
-						<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td>
-				</tr>
+
+
+				<!--<tr class="text-c">-->
+					<!--<td><input type="checkbox" value="" name=""></td>-->
+					<!--<td>10001</td>-->
+					<!--<td >睿智数码</u></td>-->
+					<!--<td>采购笔记本电脑意向</td>-->
+					<!--<td>刘先生</td>-->
+					<!--<td>13729239239</td>-->
+					<!--<td>2014-6-11 11:11:42</td>-->
+				    <!--<td class="td-status"><span class="label label-success radius">已指派</span></td>-->
+					<!--<td class="f-14 td-manage">-->
+						<!--<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-createplan.html','10001')" href="javascript:;" title="制定计划"><i class="Hui-iconfont">&#xe725;</i>制定计划</a> &nbsp;&nbsp;&nbsp;&nbsp;-->
+						<!--<a class="btn btn-primary radius" style="text-decoration:none"  onClick="article_edit('','customer-develop-executeplan.html')" href="javascript:;" title="执行计划"><i class="Hui-iconfont">&#xe726;</i>执行计划</a></td>-->
+				<!--</tr>-->
 
 
 				<tr class="text-c" th:each="allSale : ${allSales}">
@@ -99,8 +101,8 @@
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
-<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js" th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}" ></script>
+<script type="text/javascript" src="public/laypage/1.2/laypage.js" th:src="@{/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
 $('.table-sort').dataTable({
 	"aaSorting": [
