--- a/src/main/resources/templates/sales-opportunity-add.html
+++ b/src/main/resources/templates/sales-opportunity-add.html
@@ -138,7 +138,7 @@
 				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
 
 
-				<a class="btn btn-default radius" type="button" href="javascript:window.location.href ='sales-opportunity.html'">返回销售管理界面</a>
+				<a class="btn btn-default radius" th:href="@{/sales}" type="button" href="javascript:window.location.href ='sales-opportunity.html'">返回销售管理界面</a>
 			</div>
 		</div>
 	</form>
