--- a/src/main/resources/templates/service-feedback.html
+++ b/src/main/resources/templates/service-feedback.html
@@ -141,8 +141,8 @@
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" src="public/My97DatePicker/4.8/WdatePicker.js" th:src="@{/My97DatePicker/4.8/WdatePicker.js}"></script>
-<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="public/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="public/datatables/1.10.0/jquery.dataTables.min.js" th:src="@{/datatables/1.10.0/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" src="public/laypage/1.2/laypage.js" th:src="@{/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
 $('.table-sort').dataTable({
 	"aaSorting": [
