--- a/src/main/resources/templates/customer-develop-createplan.html
+++ b/src/main/resources/templates/customer-develop-createplan.html
@@ -40,7 +40,7 @@
 				<tr>
 
 					<td width="100" ><span class="l"  ><label >编号：</label> </span> </td>
-					<td th:text="${allSale.number}"><span style="float:left;">没有数据显示</span></td>
+					<td ><span style="float:left;" th:text="${allSale.number}">没有数据显示</span></td>
 
 					<td width="100"><span class="l" > <label>机会来源：</label></span> </td>
 					<td th:text="${allSale.source}"><span style="float:left;"></span></td>
@@ -111,33 +111,34 @@
 	</div>
 
 	<!--结束-->
-			 
+
 			</form>
 			</table>
 	</div>
 	
 	
 	<div class="mt-20">
-	<form action="" method="post" class="form form-horizontal" id="form-member-add">
+	<form th:action="@{/createPlanBySaleId}"  method="post" class="form form-horizontal" id="form-member-add">
 	<table>
 	<tr>
-	
+		<!--<input type="hidden" th:value="${allSale.id}"  name="id" id="id">-->
+		<input type="hidden" th:value="${allSale.number}"  name="saleId" id="saleId">
 	<div class="mt-20">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-1"><span class="c-red">*</span>日期：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="date " name="date">
+				<input type="text" class="input-text" value="" placeholder="" id="date " name="createTime">
 			</div>
 		</div>
-		
+
 		</tr>
 		<tr>
-		
+
 	<div class="mt-20">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-1"><span class="c-red">*</span>计划项：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="plans" name="plans">
+				<input type="text" class="input-text" value="" placeholder="" id="plans" name="planContent">
 			</div>
 		</div>
 		</tr>
@@ -151,11 +152,7 @@
 			</div>
 		</div>
 	</form>
-	
-	<form class="form form-horizontal" id="form-article-add">
 
-	
-	
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			<thead>
@@ -167,35 +164,21 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
+
+				<tr class="text-c" th:each="allPlan : ${allPlans}" >
+					<form th:action="@{/updataPlan}" th:object="${plan}" method="post">
 					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					
-			
-	
-					
-					
+							<input  type="hidden" th:value="${allPlan.id}"  name="id" id="id">
+							<input  type="hidden" th:value="${allPlan.saleId}"  name="saleId" id="saleId">
+					<td th:text="${allPlan.createTime}"  name="createTime" type="text"></td>
 					<td class="f-14 td-manage">
-                       <div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="plan" name="plan">
-			</div>
-				 <button onClick="article_save();" class="btn btn-secondary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button> &nbsp;&nbsp;<a href="javascript:;" onclick="article_del(this)" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 删除</a>
-             </td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""></td>
-					<td>10001</td>
-					
-			
-	
-					
-					
-					<td class="f-14 td-manage">
-                       <div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="plan" name="plan">
-			</div>
-				 <button onClick="article_save();" class="btn btn-secondary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button> &nbsp;&nbsp;<a href="javascript:;" onclick="article_del(this)" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 删除</a>
-             </td>
+						<div class="formControls col-xs-8 col-sm-9">
+							<input th:value="${allPlan.planContent}" type="text" class="input-text" value="" placeholder="" id="plan" name="planContent">
+						</div>
+
+						<button   class="btn btn-secondary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button> &nbsp;&nbsp;<a th:href="@{/deletePlan/{id}(id=${allPlan.id})}" href="javascript:;" onclick="article_del(this)" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 删除</a>
+					</td>
+					</form>
 				</tr>
 				
 				
@@ -212,7 +195,63 @@
 				<a class="btn btn-default radius" th:href="@{/developingCustomer}" type="button" href="javascript:window.location.href ='customer-develop.html'">返回客户开发界面</a>
 			</div>
 
-	</form>
+		<form class="form form-horizontal" id="form-article-add">
+
+
+
+			<!--<div class="mt-20">
+        <table class="table table-border table-bordered table-bg table-hover table-sort table-responsive data">
+                    <thead>
+                        <tr class="text-c">
+                            <td width="180">日期</td>
+                            <td>计划项</th>
+                            <td style="width:240px;">
+                            <div class="row cl">
+                    <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
+                    <span style="text-align: right;display:block;">
+                        <a id="addBtn" class="optLink" href="javascript:;"/><button  class="btn btn-primary radius" ><i class="Hui-iconfont">&#xe600;</i> 新增计划项</button></a>
+
+                    </span>
+
+                    <div id="box"></div>
+                    </div>
+
+                </div>
+                            </td>
+                        </tr>
+                    </thead>
+
+
+
+            </div>
+
+
+
+                </table>
+
+                <br>-->
+
+			<!--<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive data">-->
+				<!--<tr>-->
+					<!--<td width="180">日期</td>-->
+					<!--<td>计划项</td>-->
+
+					<!--<td style="width:150px;">-->
+						<!--<div class="row cl">-->
+							<!--<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">-->
+			<!--<span style="text-align: right;display:block;">-->
+				<!--<a id="addBtn" class="optLink" href="javascript:;"/><i class="Hui-iconfont">&#xe600;</i> 新增计划项</a>-->
+							<!--</div>-->
+
+						<!--</div>-->
+					<!--</td>-->
+				<!--</tr>-->
+			<!--</table>-->
+	<!--</div>-->
+
+		<!--</form>-->
+
+
 </article>
 
 <!--_footer 作为公共模版分离出去-->
@@ -231,139 +270,10 @@
 <script type="text/javascript" src="public/ueditor/1.4.3/ueditor.all.min.js" th:src="@{/ueditor/1.4.3/ueditor.all.min.js}"> </script>
 <script type="text/javascript" src="public/ueditor/1.4.3/lang/zh-cn/zh-cn.js" th:src="@{/ueditor/1.4.3/lang/zh-cn/zh-cn.js}"></script>
 <script type="text/javascript">
-$(function(){
-	$('.skin-minimal input').iCheck({
-		checkboxClass: 'icheckbox-blue',
-		radioClass: 'iradio-blue',
-		increaseArea: '20%'
-	});
-	
-	//表单验证
-	$("#form-article-add").validate({
-		rules:{
-		
-			dispatcher:{
-				required:true,
-			},
-			dispatch-time:{
-				required:true,
-			},
-			
-			
-		},
-		onkeyup:false,
-		focusCleanup:true,
-		success:"valid",
-		submitHandler:function(form){
-			//$(form).ajaxSubmit();
-			var index = parent.layer.getFrameIndex(window.name);
-			//parent.$('.btn-refresh').click();
-			parent.layer.close(index);
-		}
-	});
-	
-	$list = $("#fileList"),
-	$btn = $("#btn-star"),
-	state = "pending",
-	uploader;
 
-	var uploader = WebUploader.create({
-		auto: true,
-		swf: 'public/webuploader/0.1.5/Uploader.swf',
-	
-		// 文件接收服务端。
-		server: 'fileupload.php',
-	
-		// 选择文件的按钮。可选。
-		// 内部根据当前运行是创建，可能是input元素，也可能是flash.
-		pick: '#filePicker',
-	
-		// 不压缩image, 默认如果是jpeg，文件上传前会压缩一把再上传！
-		resize: false,
-		// 只允许选择图片文件。
-		accept: {
-			title: 'Images',
-			extensions: 'gif,jpg,jpeg,bmp,png',
-			mimeTypes: 'image/*'
-		}
-	});
-	uploader.on( 'fileQueued', function( file ) {
-		var $li = $(
-			'<div id="' + file.id + '" class="item">' +
-				'<div class="pic-box"><img></div>'+
-				'<div class="info">' + file.name + '</div>' +
-				'<p class="state">等待上传...</p>'+
-			'</div>'
-		),
-		$img = $li.find('img');
-		$list.append( $li );
-	
-		// 创建缩略图
-		// 如果为非图片文件，可以不用调用此方法。
-		// thumbnailWidth x thumbnailHeight 为 100 x 100
-		uploader.makeThumb( file, function( error, src ) {
-			if ( error ) {
-				$img.replaceWith('<span>不能预览</span>');
-				return;
-			}
-	
-			$img.attr( 'src', src );
-		}, thumbnailWidth, thumbnailHeight );
-	});
-	// 文件上传过程中创建进度条实时显示。
-	uploader.on( 'uploadProgress', function( file, percentage ) {
-		var $li = $( '#'+file.id ),
-			$percent = $li.find('.progress-box .sr-only');
-	
-		// 避免重复创建
-		if ( !$percent.length ) {
-			$percent = $('<div class="progress-box"><span class="progress-bar radius"><span class="sr-only" style="width:0%"></span></span></div>').appendTo( $li ).find('.sr-only');
-		}
-		$li.find(".state").text("上传中");
-		$percent.css( 'width', percentage * 100 + '%' );
-	});
-	
-	// 文件上传成功，给item添加成功class, 用样式标记上传成功。
-	uploader.on( 'uploadSuccess', function( file ) {
-		$( '#'+file.id ).addClass('upload-state-success').find(".state").text("已上传");
-	});
-	
-	// 文件上传失败，显示上传出错。
-	uploader.on( 'uploadError', function( file ) {
-		$( '#'+file.id ).addClass('upload-state-error').find(".state").text("上传出错");
-	});
-	
-	// 完成上传完了，成功或者失败，先删除进度条。
-	uploader.on( 'uploadComplete', function( file ) {
-		$( '#'+file.id ).find('.progress-box').fadeOut();
-	});
-	uploader.on('all', function (type) {
-        if (type === 'startUpload') {
-            state = 'uploading';
-        } else if (type === 'stopUpload') {
-            state = 'paused';
-        } else if (type === 'uploadFinished') {
-            state = 'done';
-        }
 
-        if (state === 'uploading') {
-            $btn.text('暂停上传');
-        } else {
-            $btn.text('开始上传');
-        }
-    });
 
-    $btn.on('click', function () {
-        if (state === 'uploading') {
-            uploader.stop();
-        } else {
-            uploader.upload();
-        }
-    });
-	
-	var ue = UE.getEditor('editor');
-	
-});
+
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
