--- a/src/main/resources/templates/lost-analysis.html
+++ b/src/main/resources/templates/lost-analysis.html
@@ -43,6 +43,9 @@
                         style="width:250px"
                         class="input-text">
             <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
+            <a name="" id="" class="btn btn-warning" href="/report/page/loss">
+                <i class="Hui-iconfont">&#xe618;</i>报表
+            </a>
         </form>
     </div>
     共有数据：<strong>54</strong> 条</span> </div>
