--- a/src/main/resources/templates/constitute-analysis.html
+++ b/src/main/resources/templates/constitute-analysis.html
@@ -44,6 +44,9 @@
 			</select>
 			</span>
             <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
+            <a name="" id="" class="btn btn-warning" href="/report/page/constitute">
+                <i class="Hui-iconfont">&#xe61a;</i>报表
+            </a>
         </form>
     </div>
     共有数据：<strong>54</strong> 条</span> </div>
